Interprete/static/Interprete/py/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FALSE
    TRUE

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     instruccion -> imprimir_instr
Rule 5     instruccion -> definicion_instr
Rule 6     instruccion -> asignacion_instr
Rule 7     instruccion -> mientras_instr
Rule 8     instruccion -> hacerMientras_instr
Rule 9     instruccion -> para_instr
Rule 10    instruccion -> if_instr
Rule 11    instruccion -> if_else_instr
Rule 12    imprimir_instr -> IMPRIMIR LLAVIZQ expresion_cadena LLAVDER
Rule 13    definicion_instr -> NUMERO ID
Rule 14    definicion_instr -> BOOL ID
Rule 15    expresion_logica -> ID
Rule 16    definicion_instr -> BOOL ID IGUAL expresion_logica
Rule 17    asignacion_instr -> ID IGUAL expresion_logica
Rule 18    definicion_instr -> NUMERO ID IGUAL expresion_numerica
Rule 19    asignacion_instr -> ID IGUAL expresion_numerica
Rule 20    mientras_instr -> MIENTRAS LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINMIENTRAS
Rule 21    hacerMientras_instr -> HACER DBPT instrucciones MIENTRAS LLAVIZQ expresion_logica LLAVDER
Rule 22    para_instr -> PARA LLAVIZQ definicion_instr PTCOMA expresion_logica PTCOMA asignacion_instr LLAVDER DBPT instrucciones FINPARA
Rule 23    if_instr -> IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINSI
Rule 24    if_else_instr -> IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones ELSE DBPT instrucciones FINSI
Rule 25    expresion_numerica -> expresion_numerica MAS expresion_numerica
Rule 26    expresion_numerica -> expresion_numerica MENOS expresion_numerica
Rule 27    expresion_numerica -> expresion_numerica POR expresion_numerica
Rule 28    expresion_numerica -> expresion_numerica DIVIDIDO expresion_numerica
Rule 29    expresion_numerica -> MENOS expresion_numerica
Rule 30    expresion_numerica -> PARIZQ expresion_numerica PARDER
Rule 31    expresion_numerica -> ENTERO
Rule 32    expresion_numerica -> DECIMAL
Rule 33    expresion_numerica -> ID
Rule 34    expresion_cadena -> expresion_cadena CONCAT expresion_cadena
Rule 35    expresion_cadena -> CADENA
Rule 36    expresion_cadena -> expresion_numerica
Rule 37    expresion_logica -> expresion_numerica MAYQUE expresion_numerica
Rule 38    expresion_logica -> expresion_numerica MENQUE expresion_numerica
Rule 39    expresion_logica -> expresion_numerica IGUALQUE expresion_numerica
Rule 40    expresion_logica -> expresion_numerica NIGUALQUE expresion_numerica

Terminals, with rules where they appear

BOOL                 : 14 16
CADENA               : 35
CONCAT               : 34
DBPT                 : 20 21 22 23 24 24
DECIMAL              : 32
DIVIDIDO             : 28
ELSE                 : 24
ENTERO               : 31
FALSE                : 
FINMIENTRAS          : 20
FINPARA              : 22
FINSI                : 23 24
HACER                : 21
ID                   : 13 14 15 16 17 18 19 33
IF                   : 23 24
IGUAL                : 16 17 18 19
IGUALQUE             : 39
IMPRIMIR             : 12
LLAVDER              : 12 20 21 22 23 24
LLAVIZQ              : 12 20 21 22 23 24
MAS                  : 25
MAYQUE               : 37
MENOS                : 26 29
MENQUE               : 38
MIENTRAS             : 20 21
NIGUALQUE            : 40
NUMERO               : 13 18
PARA                 : 22
PARDER               : 30
PARIZQ               : 30
POR                  : 27
PTCOMA               : 22 22
TRUE                 : 
error                : 

Nonterminals, with rules where they appear

asignacion_instr     : 6 22
definicion_instr     : 5 22
expresion_cadena     : 12 34 34
expresion_logica     : 16 17 20 21 22 23 24
expresion_numerica   : 18 19 25 25 26 26 27 27 28 28 29 30 36 37 37 38 38 39 39 40 40
hacerMientras_instr  : 8
if_else_instr        : 11
if_instr             : 10
imprimir_instr       : 4
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 20 21 22 23 24 24
mientras_instr       : 7
para_instr           : 9

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientras_instr
    (8) instruccion -> . hacerMientras_instr
    (9) instruccion -> . para_instr
    (10) instruccion -> . if_instr
    (11) instruccion -> . if_else_instr
    (12) imprimir_instr -> . IMPRIMIR LLAVIZQ expresion_cadena LLAVDER
    (13) definicion_instr -> . NUMERO ID
    (14) definicion_instr -> . BOOL ID
    (16) definicion_instr -> . BOOL ID IGUAL expresion_logica
    (18) definicion_instr -> . NUMERO ID IGUAL expresion_numerica
    (17) asignacion_instr -> . ID IGUAL expresion_logica
    (19) asignacion_instr -> . ID IGUAL expresion_numerica
    (20) mientras_instr -> . MIENTRAS LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINMIENTRAS
    (21) hacerMientras_instr -> . HACER DBPT instrucciones MIENTRAS LLAVIZQ expresion_logica LLAVDER
    (22) para_instr -> . PARA LLAVIZQ definicion_instr PTCOMA expresion_logica PTCOMA asignacion_instr LLAVDER DBPT instrucciones FINPARA
    (23) if_instr -> . IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINSI
    (24) if_else_instr -> . IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones ELSE DBPT instrucciones FINSI

    IMPRIMIR        shift and go to state 12
    NUMERO          shift and go to state 13
    BOOL            shift and go to state 15
    ID              shift and go to state 14
    MIENTRAS        shift and go to state 16
    HACER           shift and go to state 17
    PARA            shift and go to state 18
    IF              shift and go to state 19

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientras_instr                 shift and go to state 7
    hacerMientras_instr            shift and go to state 8
    para_instr                     shift and go to state 9
    if_instr                       shift and go to state 10
    if_else_instr                  shift and go to state 11

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (4) instruccion -> . imprimir_instr
    (5) instruccion -> . definicion_instr
    (6) instruccion -> . asignacion_instr
    (7) instruccion -> . mientras_instr
    (8) instruccion -> . hacerMientras_instr
    (9) instruccion -> . para_instr
    (10) instruccion -> . if_instr
    (11) instruccion -> . if_else_instr
    (12) imprimir_instr -> . IMPRIMIR LLAVIZQ expresion_cadena LLAVDER
    (13) definicion_instr -> . NUMERO ID
    (14) definicion_instr -> . BOOL ID
    (16) definicion_instr -> . BOOL ID IGUAL expresion_logica
    (18) definicion_instr -> . NUMERO ID IGUAL expresion_numerica
    (17) asignacion_instr -> . ID IGUAL expresion_logica
    (19) asignacion_instr -> . ID IGUAL expresion_numerica
    (20) mientras_instr -> . MIENTRAS LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINMIENTRAS
    (21) hacerMientras_instr -> . HACER DBPT instrucciones MIENTRAS LLAVIZQ expresion_logica LLAVDER
    (22) para_instr -> . PARA LLAVIZQ definicion_instr PTCOMA expresion_logica PTCOMA asignacion_instr LLAVDER DBPT instrucciones FINPARA
    (23) if_instr -> . IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINSI
    (24) if_else_instr -> . IF LLAVIZQ expresion_logica LLAVDER DBPT instrucciones ELSE DBPT instrucciones FINSI

    $end            reduce using rule 1 (init -> instrucciones .)
    IMPRIMIR        shift and go to state 12
    NUMERO          shift and go to state 13
    BOOL            shift and go to state 15
    ID              shift and go to state 14
    MIENTRAS        shift and go to state 16
    HACER           shift and go to state 17
    PARA            shift and go to state 18
    IF              shift and go to state 19

    instruccion                    shift and go to state 20
    imprimir_instr                 shift and go to state 4
    definicion_instr               shift and go to state 5
    asignacion_instr               shift and go to state 6
    mientras_instr                 shift and go to state 7
    hacerMientras_instr            shift and go to state 8
    para_instr                     shift and go to state 9
    if_instr                       shift and go to state 10
    if_else_instr                  shift and go to state 11

state 3

    (3) instrucciones -> instruccion .

    IMPRIMIR        reduce using rule 3 (instrucciones -> instruccion .)
    NUMERO          reduce using rule 3 (instrucciones -> instruccion .)
    BOOL            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    MIENTRAS        reduce using rule 3 (instrucciones -> instruccion .)
    HACER           reduce using rule 3 (instrucciones -> instruccion .)
    PARA            reduce using rule 3 (instrucciones -> instruccion .)
    IF              reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    FINMIENTRAS     reduce using rule 3 (instrucciones -> instruccion .)
    FINSI           reduce using rule 3 (instrucciones -> instruccion .)
    ELSE            reduce using rule 3 (instrucciones -> instruccion .)
    FINPARA         reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (4) instruccion -> imprimir_instr .

    IMPRIMIR        reduce using rule 4 (instruccion -> imprimir_instr .)
    NUMERO          reduce using rule 4 (instruccion -> imprimir_instr .)
    BOOL            reduce using rule 4 (instruccion -> imprimir_instr .)
    ID              reduce using rule 4 (instruccion -> imprimir_instr .)
    MIENTRAS        reduce using rule 4 (instruccion -> imprimir_instr .)
    HACER           reduce using rule 4 (instruccion -> imprimir_instr .)
    PARA            reduce using rule 4 (instruccion -> imprimir_instr .)
    IF              reduce using rule 4 (instruccion -> imprimir_instr .)
    $end            reduce using rule 4 (instruccion -> imprimir_instr .)
    FINMIENTRAS     reduce using rule 4 (instruccion -> imprimir_instr .)
    FINSI           reduce using rule 4 (instruccion -> imprimir_instr .)
    ELSE            reduce using rule 4 (instruccion -> imprimir_instr .)
    FINPARA         reduce using rule 4 (instruccion -> imprimir_instr .)


state 5

    (5) instruccion -> definicion_instr .

    IMPRIMIR        reduce using rule 5 (instruccion -> definicion_instr .)
    NUMERO          reduce using rule 5 (instruccion -> definicion_instr .)
    BOOL            reduce using rule 5 (instruccion -> definicion_instr .)
    ID              reduce using rule 5 (instruccion -> definicion_instr .)
    MIENTRAS        reduce using rule 5 (instruccion -> definicion_instr .)
    HACER           reduce using rule 5 (instruccion -> definicion_instr .)
    PARA            reduce using rule 5 (instruccion -> definicion_instr .)
    IF              reduce using rule 5 (instruccion -> definicion_instr .)
    $end            reduce using rule 5 (instruccion -> definicion_instr .)
    FINMIENTRAS     reduce using rule 5 (instruccion -> definicion_instr .)
    FINSI           reduce using rule 5 (instruccion -> definicion_instr .)
    ELSE            reduce using rule 5 (instruccion -> definicion_instr .)
    FINPARA         reduce using rule 5 (instruccion -> definicion_instr .)


state 6

    (6) instruccion -> asignacion_instr .

    IMPRIMIR        reduce using rule 6 (instruccion -> asignacion_instr .)
    NUMERO          reduce using rule 6 (instruccion -> asignacion_instr .)
    BOOL            reduce using rule 6 (instruccion -> asignacion_instr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr .)
    MIENTRAS        reduce using rule 6 (instruccion -> asignacion_instr .)
    HACER           reduce using rule 6 (instruccion -> asignacion_instr .)
    PARA            reduce using rule 6 (instruccion -> asignacion_instr .)
    IF              reduce using rule 6 (instruccion -> asignacion_instr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr .)
    FINMIENTRAS     reduce using rule 6 (instruccion -> asignacion_instr .)
    FINSI           reduce using rule 6 (instruccion -> asignacion_instr .)
    ELSE            reduce using rule 6 (instruccion -> asignacion_instr .)
    FINPARA         reduce using rule 6 (instruccion -> asignacion_instr .)


state 7

    (7) instruccion -> mientras_instr .

    IMPRIMIR        reduce using rule 7 (instruccion -> mientras_instr .)
    NUMERO          reduce using rule 7 (instruccion -> mientras_instr .)
    BOOL            reduce using rule 7 (instruccion -> mientras_instr .)
    ID              reduce using rule 7 (instruccion -> mientras_instr .)
    MIENTRAS        reduce using rule 7 (instruccion -> mientras_instr .)
    HACER           reduce using rule 7 (instruccion -> mientras_instr .)
    PARA            reduce using rule 7 (instruccion -> mientras_instr .)
    IF              reduce using rule 7 (instruccion -> mientras_instr .)
    $end            reduce using rule 7 (instruccion -> mientras_instr .)
    FINMIENTRAS     reduce using rule 7 (instruccion -> mientras_instr .)
    FINSI           reduce using rule 7 (instruccion -> mientras_instr .)
    ELSE            reduce using rule 7 (instruccion -> mientras_instr .)
    FINPARA         reduce using rule 7 (instruccion -> mientras_instr .)


state 8

    (8) instruccion -> hacerMientras_instr .

    IMPRIMIR        reduce using rule 8 (instruccion -> hacerMientras_instr .)
    NUMERO          reduce using rule 8 (instruccion -> hacerMientras_instr .)
    BOOL            reduce using rule 8 (instruccion -> hacerMientras_instr .)
    ID              reduce using rule 8 (instruccion -> hacerMientras_instr .)
    MIENTRAS        reduce using rule 8 (instruccion -> hacerMientras_instr .)
    HACER           reduce using rule 8 (instruccion -> hacerMientras_instr .)
    PARA            reduce using rule 8 (instruccion -> hacerMientras_instr .)
    IF              reduce using rule 8 (instruccion -> hacerMientras_instr .)
    $end            reduce using rule 8 (instruccion -> hacerMientras_instr .)
    FINMIENTRAS     reduce using rule 8 (instruccion -> hacerMientras_instr .)
    FINSI           reduce using rule 8 (instruccion -> hacerMientras_instr .)
    ELSE            reduce using rule 8 (instruccion -> hacerMientras_instr .)
    FINPARA         reduce using rule 8 (instruccion -> hacerMientras_instr .)


state 9

    (9) instruccion -> para_instr .

    IMPRIMIR        reduce using rule 9 (instruccion -> para_instr .)
    NUMERO          reduce using rule 9 (instruccion -> para_instr .)
    BOOL            reduce using rule 9 (instruccion -> para_instr .)
    ID              reduce using rule 9 (instruccion -> para_instr .)
    MIENTRAS        reduce using rule 9 (instruccion -> para_instr .)
    HACER           reduce using rule 9 (instruccion -> para_instr .)
    PARA            reduce using rule 9 (instruccion -> para_instr .)
    IF              reduce using rule 9 (instruccion -> para_instr .)
    $end            reduce using rule 9 (instruccion -> para_instr .)
    FINMIENTRAS     reduce using rule 9 (instruccion -> para_instr .)
    FINSI           reduce using rule 9 (instruccion -> para_instr .)
    ELSE            reduce using rule 9 (instruccion -> para_instr .)
    FINPARA         reduce using rule 9 (instruccion -> para_instr .)


state 10

    (10) instruccion -> if_instr .

    IMPRIMIR        reduce using rule 10 (instruccion -> if_instr .)
    NUMERO          reduce using rule 10 (instruccion -> if_instr .)
    BOOL            reduce using rule 10 (instruccion -> if_instr .)
    ID              reduce using rule 10 (instruccion -> if_instr .)
    MIENTRAS        reduce using rule 10 (instruccion -> if_instr .)
    HACER           reduce using rule 10 (instruccion -> if_instr .)
    PARA            reduce using rule 10 (instruccion -> if_instr .)
    IF              reduce using rule 10 (instruccion -> if_instr .)
    $end            reduce using rule 10 (instruccion -> if_instr .)
    FINMIENTRAS     reduce using rule 10 (instruccion -> if_instr .)
    FINSI           reduce using rule 10 (instruccion -> if_instr .)
    ELSE            reduce using rule 10 (instruccion -> if_instr .)
    FINPARA         reduce using rule 10 (instruccion -> if_instr .)


state 11

    (11) instruccion -> if_else_instr .

    IMPRIMIR        reduce using rule 11 (instruccion -> if_else_instr .)
    NUMERO          reduce using rule 11 (instruccion -> if_else_instr .)
    BOOL            reduce using rule 11 (instruccion -> if_else_instr .)
    ID              reduce using rule 11 (instruccion -> if_else_instr .)
    MIENTRAS        reduce using rule 11 (instruccion -> if_else_instr .)
    HACER           reduce using rule 11 (instruccion -> if_else_instr .)
    PARA            reduce using rule 11 (instruccion -> if_else_instr .)
    IF              reduce using rule 11 (instruccion -> if_else_instr .)
    $end            reduce using rule 11 (instruccion -> if_else_instr .)
    FINMIENTRAS     reduce using rule 11 (instruccion -> if_else_instr .)
    FINSI           reduce using rule 11 (instruccion -> if_else_instr .)
    ELSE            reduce using rule 11 (instruccion -> if_else_instr .)
    FINPARA         reduce using rule 11 (instruccion -> if_else_instr .)


state 12

    (12) imprimir_instr -> IMPRIMIR . LLAVIZQ expresion_cadena LLAVDER

    LLAVIZQ         shift and go to state 21


state 13

    (13) definicion_instr -> NUMERO . ID
    (18) definicion_instr -> NUMERO . ID IGUAL expresion_numerica

    ID              shift and go to state 22


state 14

    (17) asignacion_instr -> ID . IGUAL expresion_logica
    (19) asignacion_instr -> ID . IGUAL expresion_numerica

    IGUAL           shift and go to state 23


state 15

    (14) definicion_instr -> BOOL . ID
    (16) definicion_instr -> BOOL . ID IGUAL expresion_logica

    ID              shift and go to state 24


state 16

    (20) mientras_instr -> MIENTRAS . LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINMIENTRAS

    LLAVIZQ         shift and go to state 25


state 17

    (21) hacerMientras_instr -> HACER . DBPT instrucciones MIENTRAS LLAVIZQ expresion_logica LLAVDER

    DBPT            shift and go to state 26


state 18

    (22) para_instr -> PARA . LLAVIZQ definicion_instr PTCOMA expresion_logica PTCOMA asignacion_instr LLAVDER DBPT instrucciones FINPARA

    LLAVIZQ         shift and go to state 27


state 19

    (23) if_instr -> IF . LLAVIZQ expresion_logica LLAVDER DBPT instrucciones FINSI
    (24) if_else_instr -> IF . LLAVIZQ expresion_logica LLAVDER DBPT instrucciones ELSE DBPT instrucciones FINSI

    LLAVIZQ         shift and go to state 28


state 20

    (2) instrucciones -> instrucciones instruccion .

    IMPRIMIR        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    NUMERO          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    BOOL            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    MIENTRAS        reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    HACER           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    PARA            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    IF              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FINMIENTRAS     reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FINSI           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ELSE            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    FINPARA         reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 21

    (12) imprimir_instr -> IMPRIMIR LLAVIZQ . expresion_cadena LLAVDER
    (34) expresion_cadena -> . expresion_cadena CONCAT expresion_cadena
    (35) expresion_cadena -> . CADENA
    (36) expresion_cadena -> . expresion_numerica
    (25) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (26) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (27) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (28) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (29) expresion_numerica -> . MENOS expresion_numerica
    (30) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (31) expresion_numerica -> . ENTERO
    (32) expresion_numerica -> . DECIMAL
    (33) expresion_numerica -> . ID

    CADENA          shift and go to state 30
    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35
    ID              shift and go to state 36

    expresion_cadena               shift and go to state 29
    expresion_numerica             shift and go to state 31

state 22

    (13) definicion_instr -> NUMERO ID .
    (18) definicion_instr -> NUMERO ID . IGUAL expresion_numerica

    IMPRIMIR        reduce using rule 13 (definicion_instr -> NUMERO ID .)
    NUMERO          reduce using rule 13 (definicion_instr -> NUMERO ID .)
    BOOL            reduce using rule 13 (definicion_instr -> NUMERO ID .)
    ID              reduce using rule 13 (definicion_instr -> NUMERO ID .)
    MIENTRAS        reduce using rule 13 (definicion_instr -> NUMERO ID .)
    HACER           reduce using rule 13 (definicion_instr -> NUMERO ID .)
    PARA            reduce using rule 13 (definicion_instr -> NUMERO ID .)
    IF              reduce using rule 13 (definicion_instr -> NUMERO ID .)
    $end            reduce using rule 13 (definicion_instr -> NUMERO ID .)
    PTCOMA          reduce using rule 13 (definicion_instr -> NUMERO ID .)
    FINMIENTRAS     reduce using rule 13 (definicion_instr -> NUMERO ID .)
    FINSI           reduce using rule 13 (definicion_instr -> NUMERO ID .)
    ELSE            reduce using rule 13 (definicion_instr -> NUMERO ID .)
    FINPARA         reduce using rule 13 (definicion_instr -> NUMERO ID .)
    IGUAL           shift and go to state 37


state 23

    (17) asignacion_instr -> ID IGUAL . expresion_logica
    (19) asignacion_instr -> ID IGUAL . expresion_numerica
    (15) expresion_logica -> . ID
    (37) expresion_logica -> . expresion_numerica MAYQUE expresion_numerica
    (38) expresion_logica -> . expresion_numerica MENQUE expresion_numerica
    (39) expresion_logica -> . expresion_numerica IGUALQUE expresion_numerica
    (40) expresion_logica -> . expresion_numerica NIGUALQUE expresion_numerica
    (25) expresion_numerica -> . expresion_numerica MAS expresion_numerica
    (26) expresion_numerica -> . expresion_numerica MENOS expresion_numerica
    (27) expresion_numerica -> . expresion_numerica POR expresion_numerica
    (28) expresion_numerica -> . expresion_numerica DIVIDIDO expresion_numerica
    (29) expresion_numerica -> . MENOS expresion_numerica
    (30) expresion_numerica -> . PARIZQ expresion_numerica PARDER
    (31) expresion_numerica -> . ENTERO
    (32) expresion_numerica -> . DECIMAL
    (33) expresion_numerica -> . ID

    ID              shift and go to state 38
    MENOS           shift and go to state 32
    PARIZQ          shift and go to state 33
    ENTERO          shift and go to state 34
    DECIMAL         shift and go to state 35

    expresion_logica               shift and go to state 39
    expresion_numerica             shift and go to state 40

state 24

    (14) definicion_instr -> BOOL ID .
    (16) definicion_instr -> BOOL ID . IGUAL expresion_logica

    IMPRIMIR        reduce using rule 14 (definicion_instr -> BOOL ID .)
    NUMERO          reduce using rule 14 (definicion_instr -> BOOL ID .)
    BOOL            reduce using rule 14 (definicion_instr -> BOOL ID .)
